Changed alt attribute

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Beach Paradise</title>
-    <link href="./resources/style.css" type="text/css" rel="stylesheet"> 
+    <link href="./resources/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <h1>Beach Paradise</h1>
@@ -19,7 +19,7 @@
     </div>
 
     <div id="bahia">
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/bahia.jpeg" alt="Bay of Bahia"/>
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/bahia.jpeg" alt="Bay of Bahia Beach"/>
       <h3>Bay of Bahia</h3>
       <p>Nestled on the northern end of the Isle of Caludge, this beach is cited
         as the most popular getaway for vacationers during peak summer months.
